update tutorial in python

--- a/examples/scSurvival_Tutorial_in_Python.ipynb
+++ b/examples/scSurvival_Tutorial_in_Python.ipynb
@@ -25,7 +25,8 @@
    "outputs": [],
    "source": [
     "%pip install -e ..\n",
-    "%pip install scanpy"
+    "%pip install scanpy\n",
+    "%pip install requests"
    ]
   },
   {
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,24 +58,63 @@
    "metadata": {},
    "source": [
     "## scSurvival example\n",
-    "First, we need to download the prepared simulated dataset and extract it. This can be done directly in Python using the wget and tarfile packages."
+    "First, we need to download the prepared simulated dataset and extract it. This can be done directly in Python using the `wget` and `tarfile` packages."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "./data/simulated_data.tar.gz: 100%|██████████| 278M/278M [00:22<00:00, 13.2MB/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import tarfile\n",
+    "import requests\n",
     "\n",
-    "url = 'xxxx/simulated_data.tar.gz'\n",
+    "def download_with_progress(url, save_path):\n",
+    "    response = requests.get(url, stream=True)\n",
+    "    total = int(response.headers.get('content-length', 0))\n",
+    "    with open(save_path, 'wb') as f, tqdm(\n",
+    "        total=total,\n",
+    "        unit='B',\n",
+    "        unit_scale=True,\n",
+    "        unit_divisor=1024,\n",
+    "        desc=save_path\n",
+    "    ) as bar:\n",
+    "        for chunk in response.iter_content(chunk_size=8192):\n",
+    "            if chunk:\n",
+    "                f.write(chunk)\n",
+    "                bar.update(len(chunk))\n",
+    "\n",
+    "url = 'https://xialab.s3.us-west-2.amazonaws.com/tools/scSurvival/simulated_data.tar.gz'\n",
     "save_path = './data/simulated_data.tar.gz'\n",
     "\n",
     "os.makedirs(\"data\", exist_ok=True)\n",
     "print('Downloading data...')\n",
-    "os.system(f\"wget {url} -O {save_path}\")\n",
+    "download_with_progress(url, save_path)    \n",
     "\n",
     "with tarfile.open(save_path, \"r:gz\") as tar:\n",
     "    print('Extracting files...')\n",
