--- a/examples/scSurvival_Tutorial_in_Python.ipynb
+++ b/examples/scSurvival_Tutorial_in_Python.ipynb
@@ -678,10 +678,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reference\n",
+    "<!-- ## Reference\n",
     "scSurvial: survival analysis from single-cell cohort data at cellular resolution.\n",
     "\n",
-    "Tao Ren, Faming Zhao, Canping Chen, Ling-Yun Wu and Zheng Xia"
+    "Tao Ren, Faming Zhao, Canping Chen, Ling-Yun Wu and Zheng Xia -->"
    ]
   }
  ],
