--- a/examples/scSurvival_Tutorial_in_Python.ipynb
+++ b/examples/scSurvival_Tutorial_in_Python.ipynb
@@ -231,6 +231,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "scSurvival also supports multiple feature extraction strategies to accommodate different scenarios. Users can specify the `feature_flavor` parameter: when set to 'PCA', the model uses principal components as input features for rapid analysis, and if no PCA result is available in adata.obsm, it will be computed automatically; when set to 'Custom', users can directly provide custom features stored in adata.obsm[feature_key], in which case the `feature_key` must be explicitly specified. In addition, when feature_flavor is set to 'AE', the reconstruction distribution (set by parameter `rec_likelihood`) can be chosen between 'ZIG' (Zero-inflated Gaussian) and 'G' (Gaussian), thereby retaining the advantages of the default ZIG-VAE architecture while offering more flexible options for feature modeling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Show results \n",
     "\n",
     "##### Results for scSurvival patient hazard score and covariates\n",
